code review remarks
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>